--- a/notebooks/02_ghcn2_analysis.ipynb
+++ b/notebooks/02_ghcn2_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "63f8b8c7-fd01-4c25-9bc2-b223d3e0dbe0",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
     "\n",
     "# Summary:\n",
     "# - Start Spark session using shared notebook 00_ghcn2_setup.ipynb \n",
-    "# - Use lightweight config: 2 executors, 1 core each, 1GB memory\n",
+    "# - Use config: 2 executors, 1 core each, 1GB memory\n",
     "#  \n",
     "\n",
     "#  \n",
