--- a/notebooks/00_ghcn2_setup.ipynb
+++ b/notebooks/00_ghcn2_setup.ipynb
@@ -273,21 +273,29 @@
     "    if b:\n",
     "        print(s)\n",
     "\n",
-    "def hprintf(b: bool, df, n=5):\n",
+    "def hprintf(b: bool, df, n=5, bSkema: bool = 1,bTable: bool = 1):\n",
     "    \"\"\"Conditional print of top rows in Spark DataFrame (safe for large datasets)\"\"\"\n",
     "    try:\n",
-    "        dprintf(1, \"hprintf start\")\n",
+    "        bSkema = b and bSkema\n",
+    "        bTable = b and bTable\n",
+    "        b2     = b or  bTable \n",
+    "        dprintf(0, \"hprintf start\")\n",
     "        if not df:\n",
     "            raise ValueError(\"❌ DataFrame is None\")\n",
-    "        if b:\n",
-    "            dprintf(1, f\"hprintf: show top {n} rows\")\n",
+    "            \n",
+    "        if bSkema:\n",
+    "            dprintf(0, f\"hprintf: show top {n} rows\")\n",
     "            df.printSchema()\n",
+    "        \n",
+    "        if bTable:    \n",
     "            count = df.count()\n",
-    "            dprintf(1, f\"result.count() = {count}\")\n",
-    "            display(df.limit(n).toPandas())\n",
-    "        else:\n",
+    "            dprintf(0, f\"result.count() = {count}\")\n",
+    "            display(df.limit(n).toPandas())  # sparkdf ==>> pandadf\n",
+    "        \n",
+    "        if not b:\n",
     "            print(\"bool = 0\")\n",
-    "        dprintf(1, \"hprintf end\")\n",
+    "            \n",
+    "        dprintf(0, \"hprintf end\")\n",
     "    except Exception as e:\n",
     "        print(\"❌ Error caught in hprintf:\", type(e), e)\n",
     "        traceback.print_exc()\n",
@@ -348,33 +356,58 @@
     "        traceback.print_exc()\n",
     "        return None\n",
     "\n",
-    "def dWritePQ(b: bool = 1, path: str = \"\", df: DataFrame = None, show: int = 5):\n",
+    "def dWritePQ(b: bool = 1, path: str = \"\", sparkdf: DataFrame = None):\n",
     "    try:\n",
     "        dprintf(1, f\"dWritePQ: path = {path}\")\n",
     "\n",
-    "        if df is None:\n",
+    "        if sparkdf is None:\n",
     "            raise ValueError(\"❌ DataFrame is None — cannot write to Parquet.\")\n",
     "\n",
     "        if b:\n",
     "            dprintf(1, \"Preview before write:\")\n",
-    "            hprintf(1, df, show)\n",
+    "            hprintf(1, sparkdf)\n",
     "\n",
     "            start = time.time()\n",
-    "            df.write.mode(\"overwrite\").parquet(path)\n",
+    "            sparkdf.write.mode(\"overwrite\").parquet(path)\n",
     "            stop = time.time()\n",
     "\n",
     "            dprintf(1, f\"✅ Write complete in {stop - start:.2f} seconds\")\n",
-    "            dprintf(1, f\"📦 Rows written: {df.count()}\")\n",
+    "            dprintf(1, f\"✅ Rows written: {sparkdf.count()}\")\n",
     "            return True\n",
     "\n",
     "        else:\n",
-    "            dprintf(1, f\"⚠️  b = 0 — write to {path} skipped\")\n",
+    "            dprintf(1, f\"⚠️ b = 0: SKIPPED WRITE TO: {path} \")\n",
+    "            dprintf(1, f\"⚠️ b = 0: SKIPPED WRITE TO: {path} \")\n",
     "            return False\n",
     "\n",
     "    except Exception as e:\n",
     "        print(\"❌ Error caught during dWritePQ:\", type(e), e)\n",
     "        traceback.print_exc()\n",
     "        return False\n",
+    "        \n",
+    "def dReadPQ(b: bool = 1, path: str = \"\"):\n",
+    "    try:\n",
+    "        dprintf(1, f\"dReadPQ: path = {path}\")\n",
+    "\n",
+    "        if not b:\n",
+    "            dprintf(1, f\"⚠️  b = 0 — read from {path} skipped\")\n",
+    "            return None\n",
+    "\n",
+    "        start = time.time()\n",
+    "        result = spark.read.parquet(path)\n",
+    "        stop = time.time()\n",
+    "\n",
+    "        dprintf(1, f\"✅ Read complete in {stop - start:.2f} seconds\")\n",
+    "        \n",
+    "        hprintf(1, result)\n",
+    "        dprintf(1, f\"✅ Rows loaded: {df.count()}\")\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(\"❌ Error caught during dReadPQ:\", type(e), e)\n",
+    "        traceback.print_exc()\n",
+    "        return None\n",
     "\n",
     "def countNonEmpty(df: DataFrame, columnName: str) -> int:\n",
     "    try:\n",
