recovery one morning

--- a/notebooks/00_ghcn2_setup.ipynb
+++ b/notebooks/00_ghcn2_setup.ipynb
@@ -263,7 +263,7 @@
     "# - Define dReadTEXT and dReadCSV for loading text/CSV files with diagnostics\n",
     "# - Define dWritePQ to write DataFrame to Parquet with diagnostics\n",
     "# - Define countNonEmpty to count rows with values in a column\n",
-    "\n",
+    "# - and more. \n",
     "\n",
     "\n",
     "DEEBUG = True  # override at any point in the cells\n",
@@ -280,6 +280,10 @@
     "        bTable = b and bTable\n",
     "        b2     = b or  bTable \n",
     "        dprintf(0, \"hprintf start\")\n",
+    "        if not b:\n",
+    "            print(\"hprintf bool = 0\")\n",
+    "            return 0\n",
+    "        \n",
     "        if not df:\n",
     "            raise ValueError(\"❌ DataFrame is None\")\n",
     "            \n",
@@ -289,15 +293,12 @@
     "        \n",
     "        if bTable:    \n",
     "            count = df.count()\n",
-    "            dprintf(0, f\"result.count() = {count}\")\n",
+    "            dprintf(0, f\"rows = {count}\")\n",
     "            display(df.limit(n).toPandas())  # sparkdf ==>> pandadf\n",
-    "        \n",
-    "        if not b:\n",
-    "            print(\"bool = 0\")\n",
-    "            \n",
     "        dprintf(0, \"hprintf end\")\n",
+    "        return 1\n",
     "    except Exception as e:\n",
-    "        print(\"❌ Error caught in hprintf:\", type(e), e)\n",
+    "        dprintf(1,\"❌ Error caught in hprintf:\", type(e), e)\n",
     "        traceback.print_exc()\n",
     "\n",
     "def dReadTEXT(b: bool, path: str, show: int = 5) -> DataFrame:\n",
@@ -329,7 +330,7 @@
     "        dprintf(1, f\"path: {path}\")\n",
     "\n",
     "        if schema:\n",
-    "            dprintf(1, f\"schema: {schema.simpleString()}\")\n",
+    "            dprintf(1, f\"schema: {schema.simpleString()}\") # for future \n",
     "        else:\n",
     "            dprintf(1, \"no schema\")\n",
     "\n",
@@ -390,8 +391,12 @@
     "        dprintf(1, f\"dReadPQ: path = {path}\")\n",
     "\n",
     "        if not b:\n",
-    "            dprintf(1, f\"⚠️  b = 0 — read from {path} skipped\")\n",
-    "            return None\n",
+    "\n",
+    "\n",
+    "            dprintf(1, f\"⚠️ b = 0: SKIPPED READ FROM: {path} \")\n",
+    "            dprintf(1, f\"⚠️ b = 0: SKIPPED READ FROM: {path} \")\n",
+    "\n",
+    "            return True\n",
     "\n",
     "        start = time.time()\n",
     "        result = spark.read.parquet(path)\n",
@@ -400,7 +405,8 @@
     "        dprintf(1, f\"✅ Read complete in {stop - start:.2f} seconds\")\n",
     "        \n",
     "        hprintf(1, result)\n",
-    "        dprintf(1, f\"✅ Rows loaded: {df.count()}\")\n",
+    "        dprintf(1, f\"✅ Rows loaded: {result.count()}\")\n",
+    "        dprintf(1, f\"✅ Rows loaded: {result.count()}\")\n",
     "\n",
     "        return result\n",
     "\n",
