one for the gipper

--- a/notebooks/02_ghcn2_analysis.ipynb
+++ b/notebooks/02_ghcn2_analysis.ipynb
@@ -197,32 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "ef6af364",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "theMetadata\n",
-      "dReadPQ: path = wasbs://campus-user@madsstorage002.blob.core.windows.net/dew59/CLASSIFY-metadata.parquet\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Read complete in 3.62 seconds\n",
+      "dReadPQ: path = wasbs://campus-user@madsstorage002.blob.core.windows.net/dew59/CLASSIFY-metadata.parquet\n",
+      "✅ Read complete in 0.22 seconds\n",
       "root\n",
       " |-- ID: string (nullable = true)\n",
       " |-- LATITUDE: double (nullable = true)\n",
@@ -240,28 +225,8 @@
       " |-- LASTYEAR: integer (nullable = true)\n",
       " |-- STATENAME: string (nullable = true)\n",
       " |-- CLASSIFICATION: string (nullable = true)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "rows = 8221223\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                "
      ]
     },
     {
@@ -435,6 +400,7 @@
      "text": [
       "✅ Rows loaded: 8221223\n",
       "✅ Rows loaded: 8221223\n",
+      "['ID', 'LATITUDE', 'LONGITUDE', 'ELEVATION', 'STATE', 'STATIONNAME', 'GSNFLAG', 'HCNFLAG', 'WMOID', 'COUNTRYCODE', 'COUNTRYNAME', 'ELEMENT', 'FIRSTYEAR', 'LASTYEAR', 'STATENAME', 'CLASSIFICATION']\n",
       "dReadPQ: path = wasbs://campus-user@madsstorage002.blob.core.windows.net/dew59/INVENTORY-metadata.parquet\n",
       "⚠️ b = 0: SKIPPED READ FROM: wasbs://campus-user@madsstorage002.blob.core.windows.net/dew59/INVENTORY-metadata.parquet \n",
       "⚠️ b = 0: SKIPPED READ FROM: wasbs://campus-user@madsstorage002.blob.core.windows.net/dew59/INVENTORY-metadata.parquet \n"
@@ -454,6 +420,7 @@
     "\n",
     "dprintf(DEEBUG, \"theMetadata\")\n",
     "theMetadata = dReadPQ(1, PQPathClassifiedStationsdf)\n",
+    "dprintf(1,theMetadata.columns)\n",
     "inventordf  = dReadPQ(0, PQPathinventorydf)\n",
     "   \n"
    ]
@@ -462,7 +429,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "5b229c90",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -578,19 +547,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "6f3510f2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'when' is not defined",
+     "ename": "AnalysisException",
+     "evalue": "[UNRESOLVED_COLUMN.WITH_SUGGESTION] A column or function parameter with name `GSNFLG` cannot be resolved. Did you mean one of the following? [`GSNFLAG`, `HCNFLAG`, `ID`, `STATE`, `WMOID`].;\n'Project [ID#264, LATITUDE#265, LONGITUDE#266, ELEVATION#267, STATE#268, STATIONNAME#269, GSNFLAG#270, HCNFLAG#271, WMOID#272, COUNTRYCODE#273, COUNTRYNAME#274, ELEMENT#275, FIRSTYEAR#276, LASTYEAR#277, STATENAME#278, CLASSIFICATION#279, CASE WHEN (isnotnull('GSNFLG) AND NOT ('GSNFLG = )) THEN 1 ELSE 0 END AS inGSN#359]\n+- Relation [ID#264,LATITUDE#265,LONGITUDE#266,ELEVATION#267,STATE#268,STATIONNAME#269,GSNFLAG#270,HCNFLAG#271,WMOID#272,COUNTRYCODE#273,COUNTRYNAME#274,ELEMENT#275,FIRSTYEAR#276,LASTYEAR#277,STATENAME#278,CLASSIFICATION#279] parquet\n",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 12\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# CELL 5 Q1(a.4): – Stations in more than one network\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# CELL 5 Q1(a.4): \u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# ------------------------------------------------\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m \n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#  \u001b[39;00m\n\u001b[1;32m     11\u001b[0m stationsFlagged \u001b[38;5;241m=\u001b[39m theMetadata \\\n\u001b[0;32m---> 12\u001b[0m     \u001b[38;5;241m.\u001b[39mwithColumn(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minGSN\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mwhen\u001b[49m((col(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGSNFLAG\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39misNotNull()) \u001b[38;5;241m&\u001b[39m (col(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGSNFLAG\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m), \u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39motherwise(\u001b[38;5;241m0\u001b[39m)) \\\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;241m.\u001b[39mwithColumn(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minHCN\u001b[39m\u001b[38;5;124m\"\u001b[39m, when(col(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHCNFLAG\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHCN\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39motherwise(\u001b[38;5;241m0\u001b[39m)) \\\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;241m.\u001b[39mwithColumn(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minCRN\u001b[39m\u001b[38;5;124m\"\u001b[39m, when(col(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHCNFLAG\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCRN\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39motherwise(\u001b[38;5;241m0\u001b[39m)) \\\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;241m.\u001b[39mwithColumn(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnMemberships\u001b[39m\u001b[38;5;124m\"\u001b[39m, col(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minGSN\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m+\u001b[39m col(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minHCN\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m+\u001b[39m col(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minCRN\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m     17\u001b[0m nMultiNetwork \u001b[38;5;241m=\u001b[39m stationsFlagged \\\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;241m.\u001b[39mfilter(col(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnMemberships\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m) \\\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;241m.\u001b[39mselect(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mID\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mdistinct()\u001b[38;5;241m.\u001b[39mcount()\n\u001b[1;32m     21\u001b[0m dprintf(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStations in more than one network: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnMultiNetwork\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'when' is not defined"
+      "\u001b[0;31mAnalysisException\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 13\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# CELL 5 Q1(a.4): – Stations in more than one network\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# CELL 5 Q1(a.4): \u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# ------------------------------------------------\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      9\u001b[0m \n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Import necessary functions\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpyspark\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msql\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfunctions\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m when, col\n\u001b[0;32m---> 13\u001b[0m stationsFlagged \u001b[38;5;241m=\u001b[39m \u001b[43mtheMetadata\u001b[49m\u001b[43m \u001b[49m\u001b[43m\\\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwithColumn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43minGSN\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwhen\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcol\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mGSNFLG\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43misNotNull\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m&\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mcol\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mGSNFLG\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m!=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43motherwise\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \\\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;241m.\u001b[39mwithColumn(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minHCN\u001b[39m\u001b[38;5;124m\"\u001b[39m, when(col(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHCNFLG\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHCN\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39motherwise(\u001b[38;5;241m0\u001b[39m)) \\\n\u001b[1;32m     16\u001b[0m     \u001b[38;5;241m.\u001b[39mwithColumn(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minCRN\u001b[39m\u001b[38;5;124m\"\u001b[39m, when(col(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHCNFLG\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCRN\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39motherwise(\u001b[38;5;241m0\u001b[39m)) \\\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;241m.\u001b[39mwithColumn(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnMemberships\u001b[39m\u001b[38;5;124m\"\u001b[39m, col(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minGSN\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m+\u001b[39m col(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minHCN\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m+\u001b[39m col(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minCRN\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Debugging: Print dataframe schema and first few rows\u001b[39;00m\n\u001b[1;32m     20\u001b[0m dprintf(DEEBUG, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstationsFlagged created (GSN, HCN, CRN memberships)\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/opt/spark/python/pyspark/sql/dataframe.py:5174\u001b[0m, in \u001b[0;36mDataFrame.withColumn\u001b[0;34m(self, colName, col)\u001b[0m\n\u001b[1;32m   5169\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(col, Column):\n\u001b[1;32m   5170\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m PySparkTypeError(\n\u001b[1;32m   5171\u001b[0m         error_class\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNOT_COLUMN\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   5172\u001b[0m         message_parameters\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marg_name\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcol\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marg_type\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mtype\u001b[39m(col)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m},\n\u001b[1;32m   5173\u001b[0m     )\n\u001b[0;32m-> 5174\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m DataFrame(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwithColumn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcolName\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcol\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jc\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msparkSession)\n",
+      "File \u001b[0;32m/opt/spark/python/lib/py4j-0.10.9.7-src.zip/py4j/java_gateway.py:1322\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1316\u001b[0m command \u001b[38;5;241m=\u001b[39m proto\u001b[38;5;241m.\u001b[39mCALL_COMMAND_NAME \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_header \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     args_command \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1319\u001b[0m     proto\u001b[38;5;241m.\u001b[39mEND_COMMAND_PART\n\u001b[1;32m   1321\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgateway_client\u001b[38;5;241m.\u001b[39msend_command(command)\n\u001b[0;32m-> 1322\u001b[0m return_value \u001b[38;5;241m=\u001b[39m \u001b[43mget_return_value\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1323\u001b[0m \u001b[43m    \u001b[49m\u001b[43manswer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgateway_client\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtarget_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1325\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n\u001b[1;32m   1326\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(temp_arg, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_detach\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "File \u001b[0;32m/opt/spark/python/pyspark/errors/exceptions/captured.py:185\u001b[0m, in \u001b[0;36mcapture_sql_exception.<locals>.deco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    181\u001b[0m converted \u001b[38;5;241m=\u001b[39m convert_exception(e\u001b[38;5;241m.\u001b[39mjava_exception)\n\u001b[1;32m    182\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(converted, UnknownException):\n\u001b[1;32m    183\u001b[0m     \u001b[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[1;32m    184\u001b[0m     \u001b[38;5;66;03m# JVM exception message.\u001b[39;00m\n\u001b[0;32m--> 185\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m converted \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    186\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    187\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
+      "\u001b[0;31mAnalysisException\u001b[0m: [UNRESOLVED_COLUMN.WITH_SUGGESTION] A column or function parameter with name `GSNFLG` cannot be resolved. Did you mean one of the following? [`GSNFLAG`, `HCNFLAG`, `ID`, `STATE`, `WMOID`].;\n'Project [ID#264, LATITUDE#265, LONGITUDE#266, ELEVATION#267, STATE#268, STATIONNAME#269, GSNFLAG#270, HCNFLAG#271, WMOID#272, COUNTRYCODE#273, COUNTRYNAME#274, ELEMENT#275, FIRSTYEAR#276, LASTYEAR#277, STATENAME#278, CLASSIFICATION#279, CASE WHEN (isnotnull('GSNFLG) AND NOT ('GSNFLG = )) THEN 1 ELSE 0 END AS inGSN#359]\n+- Relation [ID#264,LATITUDE#265,LONGITUDE#266,ELEVATION#267,STATE#268,STATIONNAME#269,GSNFLAG#270,HCNFLAG#271,WMOID#272,COUNTRYCODE#273,COUNTRYNAME#274,ELEMENT#275,FIRSTYEAR#276,LASTYEAR#277,STATENAME#278,CLASSIFICATION#279] parquet\n"
      ]
     }
    ],
@@ -602,20 +574,31 @@
     "# - define boolean flags for membership in GSN, HCN, CRN\n",
     "# - count rows where station belongs to two or more networks\n",
     "\n",
-    "#  \n",
+    "#\n",
     "\n",
+    "# Import necessary functions\n",
+    "from pyspark.sql.functions import when, col\n",
     "\n",
     "stationsFlagged = theMetadata \\\n",
-    "    .withColumn(\"inGSN\", when((col(\"GSNFLAG\").isNotNull()) & (col(\"GSNFLAG\") != \"\"), 1).otherwise(0)) \\\n",
-    "    .withColumn(\"inHCN\", when(col(\"HCNFLAG\") == \"HCN\", 1).otherwise(0)) \\\n",
-    "    .withColumn(\"inCRN\", when(col(\"HCNFLAG\") == \"CRN\", 1).otherwise(0)) \\\n",
+    "    .withColumn(\"inGSN\", when((col(\"GSNFLG\").isNotNull()) & (col(\"GSNFLG\") != \"\"), 1).otherwise(0)) \\\n",
+    "    .withColumn(\"inHCN\",X when(col(\"HCNFLG\") == \"HCN\", 1).otherwise(0)) \\\n",
+    "    .withColumn(\"inCRN\", when(col(\"HCNFLG\") == \"CRN\", 1).otherwise(0)) \\\n",
     "    .withColumn(\"nMemberships\", col(\"inGSN\") + col(\"inHCN\") + col(\"inCRN\"))\n",
     "\n",
+    "# Debugging: Print dataframe schema and first few rows\n",
+    "dprintf(DEEBUG, \"stationsFlagged created (GSN, HCN, CRN memberships)\")\n",
+    "hprintf(DEEBUG, stationsFlagged)\n",
+    "\n",
+    "# Filter rows where station belongs to two or more networks\n",
     "nMultiNetwork = stationsFlagged \\\n",
     "    .filter(col(\"nMemberships\") >= 2) \\\n",
     "    .select(\"ID\").distinct().count()\n",
     "\n",
-    "dprintf(1, f\"Stations in more than one network: {nMultiNetwork}\")\n"
+    "# Final result output\n",
+    "dprintf(1, f\"Stations in more than one network: {nMultiNetwork}\")\n",
+    "# Final result output\n",
+    "dprintf(1, f\"Stations in more than one network: {nMultiNetwork}\")\n",
+    "\n"
    ]
   },
   {
